cmake_minimum_required(VERSION 3.15)

project(Mini-Mahjong)

# Set default variables
set(MINI_MAHJONG_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(MINI_MAHJONG_INC_DIR ${MINI_MAHJONG_ROOT_DIR})
set(MINI_MAHJONG_SRC_DIR ${MINI_MAHJONG_ROOT_DIR}/Source)
set(MINI_MAHJONG_TEST_DIR ${MINI_MAHJONG_ROOT_DIR}/Test)
set(MINI_MAHJONG_BUILD_DIR ${MINI_MAHJONG_ROOT_DIR}/Build/${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

set(CMAKE_INSTALL_PREFIX ${MINI_MAHJONG_BUILD_DIR})
set(CMAKE_INSTALL_BINDIR ${MINI_MAHJONG_BUILD_DIR})
set(CMAKE_INSTALL_LIBDIR ${MINI_MAHJONG_BUILD_DIR})
set(CMAKE_INSTALL_LIBEXEDIR ${MINI_MAHJONG_BUILD_DIR})

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -stdlib=libc++")
endif()

if(${CMAKE_BUILD_TYPE} MATCHES Debug)
    add_definitions(-DMINI_MAHJONG_DEBUG)
endif()

include_directories(${MINI_MAHJONG_INC_DIR})

# Try compile engine libraries and executable.
add_subdirectory(${MINI_MAHJONG_SRC_DIR})

# Testings
set(MINI_MAHJONG_TEST_ENABLED TRUE)
if(MINI_MAHJONG_TEST_ENABLED)
    add_subdirectory(${MINI_MAHJONG_TEST_DIR})
endif()